Bug 146062 and bug 136718, pay attention to namespaces in XML documents, and fix the small but important logic/typo error in handling xml-stylesheet href pseudo-attribute. r=adamlock, sr=alecf.